Update for code analysis