@@ -1,3 +1,29 @@
+/*
+ * ocel
+ *
+ * OcelAttributeMapLazyImpl.java
+ *
+ * Copyright (C) 2016-2022 Free University of Bozen-Bolzano
+ *
+ * This product includes software developed under
+ * KAOS: Knowledge-Aware Operational Support project
+ * (https://kaos.inf.unibz.it).
+ *
+ * Please visit https://onprom.inf.unibz.it for more information.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package it.unibz.ocel.model.impl;
 
 import it.unibz.ocel.model.OcelAttribute;
@@ -27,11 +53,11 @@ public class OcelAttributeMapLazyImpl<T extends OcelAttributeMap> implements Oce
     }
 
     public synchronized boolean containsKey(Object key) {
-        return this.backingStore != null ? this.backingStore.containsKey(key) : false;
+        return this.backingStore != null && this.backingStore.containsKey(key);
     }
 
     public synchronized boolean containsValue(Object value) {
-        return this.backingStore != null ? this.backingStore.containsValue(value) : false;
+        return this.backingStore != null && this.backingStore.containsValue(value);
     }
 
     public synchronized Set<Map.Entry<String, OcelAttribute>> entrySet() {
@@ -39,11 +65,11 @@ public class OcelAttributeMapLazyImpl<T extends OcelAttributeMap> implements Oce
     }
 
     public synchronized OcelAttribute get(Object key) {
-        return this.backingStore != null ? (OcelAttribute)this.backingStore.get(key) : null;
+        return this.backingStore != null ? this.backingStore.get(key) : null;
     }
 
     public synchronized boolean isEmpty() {
-        return this.backingStore != null ? this.backingStore.isEmpty() : true;
+        return this.backingStore == null || this.backingStore.isEmpty();
     }
 
     public synchronized Set<String> keySet() {
@@ -54,13 +80,13 @@ public class OcelAttributeMapLazyImpl<T extends OcelAttributeMap> implements Oce
         if (this.backingStore == null) {
             try {
 //                this.backingStore = (OcelAttributeMap)this.backingStoreClass.newInstance();
-                this.backingStore = this.backingStoreClass.newInstance();
-            } catch (Exception var4) {
-                var4.printStackTrace();
+                this.backingStore = this.backingStoreClass.getDeclaredConstructor().newInstance();
+            } catch (Exception e) {
+                e.printStackTrace();
             }
         }
 
-        return (OcelAttribute)this.backingStore.put(key, value);
+        return this.backingStore.put(key, value);
     }
 
     public synchronized void putAll(Map<? extends String, ? extends OcelAttribute> t) {
@@ -68,9 +94,9 @@ public class OcelAttributeMapLazyImpl<T extends OcelAttributeMap> implements Oce
             if (this.backingStore == null) {
                 try {
 //                    this.backingStore = (OcelAttributeMap)this.backingStoreClass.newInstance();
-                    this.backingStore = this.backingStoreClass.newInstance();
-                } catch (Exception var3) {
-                    var3.printStackTrace();
+                    this.backingStore = this.backingStoreClass.getDeclaredConstructor().newInstance();
+                } catch (Exception e) {
+                    e.printStackTrace();
                 }
             }
 
@@ -80,7 +106,7 @@ public class OcelAttributeMapLazyImpl<T extends OcelAttributeMap> implements Oce
     }
 
     public synchronized OcelAttribute remove(Object key) {
-        return this.backingStore != null ? (OcelAttribute)this.backingStore.remove(key) : null;
+        return this.backingStore != null ? this.backingStore.remove(key) : null;
     }
 
     public synchronized int size() {
